--- a/about-us.html
+++ b/about-us.html
@@ -315,7 +315,7 @@
 							<svg class="link-social--svg" width="30" height="20">
 								<use xlink:href="#mail"></use>
 							</svg>
-							lazer.armax@gmail.com
+							armax.km@gmail.com
 						</a>
 					</li>
 				</ul>
@@ -391,7 +391,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="nav__item-social">
@@ -418,12 +418,8 @@
 
 			<div class="header__content--container">
 				<div class="header__content header__inner">
-					<h1 class="header__content-title">Коротко про нас</h1>
-					<p class="header__content-text">
-						Armax MG – сучасне та технологічно-оснащене українське виробництво, спеціалізуємось на металообробці з 2018
-						року. Надаємо повний комплекс послуг з обробки металу: лазерного різання, згинання, зварювання металевих
-						виробів та фарбування.
-					</p>
+					<h1 class="header__content-title" data-lang="header-content_page-1"></h1>
+					<p class="header__content-text" data-lang="header-content_page-2"></p>
 				</div>
 			</div>
 		</div>
@@ -433,7 +429,7 @@
 	<main class="main">
 		<div class="container">
 			<section class="a-privilege">
-				<h2 class="section__title">Чому нас обирають?</h2>
+				<h2 class="section__title" data-lang="a-privilege_page-1"></h2>
 				<div class="a-privilege__inner">
 					<div class="a-privilege__box">
 						<div class="a-privilege__card">
@@ -441,9 +437,9 @@
 								<use xlink:href="#quality"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__title">Висока якість</p>
-								<p class="a-privilege__text">
-									Дотримуємось найвищих стандартів якості у всіх аспектах бізнесу та постійно вдосконалюємо процеси.
+								<p class="a-privilege__title" data-lang="a-privilege_page-2"></p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-3">
+
 								</p>
 							</div>
 						</div>
@@ -454,9 +450,9 @@
 								<use xlink:href="#clock"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__title">Дотримуємося термінів</p>
-								<p class="a-privilege__text">
-									Гарантуємо стабільність та надійність у виконанні своїх зобов'язань.
+								<p class="a-privilege__title" data-lang="a-privilege_page-4"></p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-5">
+
 								</p>
 							</div>
 						</div>
@@ -467,9 +463,9 @@
 								<use xlink:href="#attention"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__title">Уважні до клієнта</p>
-								<p class="a-privilege__text">
-									Враховуємо та задовільняємо потреби та побажання клієнтів.
+								<p class="a-privilege__title" data-lang="a-privilege_page-6"></p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-7">
+
 								</p>
 							</div>
 						</div>
@@ -480,9 +476,9 @@
 								<use xlink:href="#idea"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__title">Знаходимо рішення</p>
-								<p class="a-privilege__text">
-									Швидко та ефективно знаходитмо оптимальні рішення.
+								<p class="a-privilege__title" data-lang="a-privilege_page-8"></p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-9">
+
 								</p>
 							</div>
 						</div>
@@ -554,7 +550,7 @@
 		</div>
 		<section class="a-privilege a-privilege--color">
 			<div class="container">
-				<h2 class="section__title">Як ми працюємо?</h2>
+				<h2 class="section__title" data-lang="a-privilege_page-10"></h2>
 				<div class="a-privilege__inner">
 					<div class="a-privilege__box a-privilege__box--size">
 						<div class="a-privilege__card a-privilege__card--position">
@@ -562,8 +558,7 @@
 								<use xlink:href="#document"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Ви залишаєте заявку на розрахунок чи консультацію фахівця
+								<p class="a-privilege__text" data-lang="a-privilege_page-11">
 								</p>
 							</div>
 						</div>
@@ -574,10 +569,7 @@
 								<use xlink:href="#call-center"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Наш менеджер зв’язується з Вами для уточнення технічного
-									завдання
-								</p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-12"></p>
 							</div>
 						</div>
 					</div>
@@ -587,9 +579,8 @@
 								<use xlink:href="#price"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Ви отримуєте прорахунок по проекту не більше ніж за 3 робочі
-									дні
+								<p class="a-privilege__text" data-lang="a-privilege_page-13">
+
 								</p>
 							</div>
 						</div>
@@ -600,8 +591,8 @@
 								<use xlink:href="#sample"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Виготовлення та затвердження Вашого зразка
+								<p class="a-privilege__text" data-lang="a-privilege_page-14">
+
 								</p>
 							</div>
 						</div>
@@ -612,10 +603,7 @@
 								<use xlink:href="#handshake-deal"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Укладання договору та погодження графіка відвантаження
-									партій
-								</p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-15"></p>
 							</div>
 						</div>
 					</div>
@@ -625,9 +613,8 @@
 								<use xlink:href="#product"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Запуск партії виробів у роботу, згідно з термінами
-									відвантаженн
+								<p class="a-privilege__text" data-lang="a-privilege_page-16">
+
 								</p>
 							</div>
 						</div>
@@ -750,7 +737,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="info__item">
