--- a/contacts.html
+++ b/contacts.html
@@ -107,7 +107,7 @@
               <svg class="link-social--svg" width="30" height="20">
                 <use xlink:href="#mail"></use>
               </svg>
-              lazer.armax@gmail.com
+              armax.km@gmail.com
             </a>
           </li>
         </ul>
@@ -183,7 +183,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazer.armax@gmail.com
+                  armax.km@gmail.com
                 </a>
               </li>
               <li class="nav__item-social">
@@ -210,11 +210,11 @@
 
       <div class="header__content--container">
         <div class="с-header__content header__inner">
-          <h1 class="header__content-title c-header__content-title">
-            Наші контакти
+          <h1 class="header__content-title c-header__content-title" data-lang="c-header_page-1">
+
           </h1>
-          <p class="header__content-text c-header__content-text">
-            Ми завжди раді з Вами поспілкуватися.
+          <p class="header__content-text c-header__content-text" data-lang="c-header_page-2">
+
           </p>
         </div>
       </div>
@@ -225,8 +225,8 @@
     <section class="c-communication">
       <div class="container c-communication__container">
         <article class="c-card">
-          <p class="c-card__title">Телефон:</p>
-          <a class="link-social c-card__text" href="tel:+380687945051">
+          <p class="c-card__title" data-lang="c-header_page-3"></p>
+          <a class="link-social c-card__text" href="tel:+380961239121">
             <svg class="c-svg" width="50" height="50">
               <use xlink:href="#c-telephone"></use>
             </svg>
@@ -234,7 +234,7 @@
           </a>
         </article>
         <article class="c-card">
-          <p class="c-card__title">Адреса:</p>
+          <p class="c-card__title" data-lang="c-header_page-4"></p>
           <a class="link-social c-card__text"
             href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602">
             <svg class="c-svg" width="50" height="50">
@@ -244,12 +244,12 @@
           </a>
         </article>
         <article class="c-card">
-          <p class="c-card__title">Email:</p>
+          <p class="c-card__title" data-lang="c-header_page-5"></p>
           <a class="link-social c-card__text" href="mailto:lazerarmax@gmail.com">
             <svg class="c-svg" width="50" height="50">
               <use xlink:href="#c-email"></use>
             </svg>
-            lazer.armax@gmail.com
+            armax.km@gmail.com
           </a>
         </article>
       </div>
@@ -265,13 +265,12 @@
     </div>
 
     <section class="calculation">
-      <!-- <div class="calculation__background"></div> -->
       <div class="calculation__inner">
         <div class="c-calculation__wrapper container">
           <div class="c-calculation__content">
             <div class="c-calculation__block">
-              <p class="c-calculation__title">Бухгалтерський відділ:</p>
-              <a class="link-social link--hover c-calculation__text" href="tel:+380687945051">
+              <p class="c-calculation__title" data-lang="c-header_page-6"></p>
+              <a class="link-social link--hover c-calculation__text" href="tel:+380961239121">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#phone"></use>
                 </svg>
@@ -281,12 +280,12 @@
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#mail"></use>
                 </svg>
-                lazer.armax@gmail.com
+                armax.km@gmail.com
               </a>
             </div>
             <div class="c-calculation__block">
-              <p class="c-calculation__title">Відділ постачання:</p>
-              <a class="link-social link--hover c-calculation__text" href="tel:+380687945051">
+              <p class="c-calculation__title" data-lang="c-header_page-7"></p>
+              <a class="link-social link--hover c-calculation__text" href="tel:+380961239121">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#phone"></use>
                 </svg>
@@ -296,12 +295,12 @@
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#mail"></use>
                 </svg>
-                lazer.armax@gmail.com
+                armax.km@gmail.com
               </a>
             </div>
             <div class="c-calculation__block">
               <p class="c-calculation__title">HR-відділ:</p>
-              <a class="link-social link--hover c-calculation__text" href="tel:+380687945051">
+              <a class="link-social link--hover c-calculation__text" href="tel:+380961239121">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#phone"></use>
                 </svg>
@@ -311,37 +310,41 @@
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#mail"></use>
                 </svg>
-                lazer.armax@gmail.com
+                armax.km@gmail.com
               </a>
             </div>
             <div class="c-calculation__block">
-              <p class="c-calculation__title">Графік роботи:</p>
+              <p class="c-calculation__title" data-lang="c-header_page-8"></p>
               <div class="c-calculation__block-info">
                 <p class="link-social c-calculation__text">
                   <svg class="link-social--svg" width="25" height="25">
                     <use xlink:href="#clock"></use>
                   </svg>
-                  >Пн - Пт 8:00 - 17:00
+                <div data-lang="c-header_page-9"></div>
+
                 </p>
               </div>
             </div>
           </div>
           <div class="c-calculation__form-container">
             <form class="calculation__form" action="send_mail.php" name="form" method="POST">
-              <label for="text">Ваше ім'я *</label>
+              <label for="text" data-lang="c-calc_page-1"></label>
               <input class="input-name" type="text" placeholder="Сергій" name="name" id="name"
-                data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)(\s([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+))?$" />
-              <label for="tel">Ваш телефон *</label>
+                data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)(\s([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+))?$"
+                data-lang="c-calc_page-2" />
+              <label for="tel" data-lang="c-calc_page-3"></label>
               <input type="tel" placeholder="050 353 40 51" name="phone" id="phone"
                 data-reg="^((\+380|380|0)+([0-9]){9})$" />
-              <label for="email">Ваш email *</label>
-              <input type="email" placeholder="vash_email@gmail.com" name="email" id="email"
+              <label for="email" data-lang="c-calc_page-4"></label>
+              <input type="email" placeholder="example@gmail.com" name="email" id="email"
                 data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
-              <textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
-              <label class="calculation__label" for="file">Завантажити файл:</label>
+              <textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"
+                data-lang="calculation_page-6"></textarea>
+              <label class="calculation__label" for="file" data-lang="calculation_page-2">Завантажити файл:</label>
               <input class="calculation__input-file" type="file" id="file" />
 
-              <input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
+              <input class="button button-form" type="submit" id="btn_send" value="Надіслати"
+                data-lang="calculation_page-3" />
 
               </button>
             </form>
@@ -390,7 +393,7 @@
             </ul>
           </div>
           <div class="info__block info__address">
-            <h5 class="info__title" data-lang="footer_page-11">Адреса</h5>
+            <h5 class="info__title" data-lang="footer_page-11"></h5>
             <ul class="info__list">
               <li class="info__item">
                 <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
@@ -435,7 +438,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazer.armax@gmail.com
+                  armax.km@gmail.com
                 </a>
               </li>
               <li class="info__item">
