--- a/dyeing.html
+++ b/dyeing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="ua">
 
 <head>
 	<meta charset="UTF-8" />
@@ -312,7 +312,7 @@
 							<svg class="link-social--svg" width="30" height="20">
 								<use xlink:href="#mail"></use>
 							</svg>
-							lazer.armax@gmail.com
+							armax.km@gmail.com
 						</a>
 					</li>
 				</ul>
@@ -379,7 +379,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#phone"></use>
 									</svg>
-									+38 (099) 132 45 67
+									+38 (096) 123 91 21
 								</a>
 							</li>
 							<li class="nav__item-social">
@@ -387,7 +387,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="nav__item-social">
@@ -415,10 +415,9 @@
 
 			<div class="header__content--container">
 				<div class="header__content header__inner">
-					<h1 class="header__content-title">Порошкове фарбування металу</h1>
-					<p class="header__content-text">
-						Наша компанія надає послуги з порошкового фарбування металу на сучасному обладнанні, за вигідними цінами та
-						у погоджені терміни
+					<h1 class="header__content-title" data-lang="d-header_page-1"></h1>
+					<p class="header__content-text" data-lang="d-header_page-2">
+
 					</p>
 				</div>
 			</div>
@@ -429,8 +428,8 @@
 
 		<section class="section l-characteristic">
 			<div class="container">
-				<h3 class="section__title">
-					Основні характеристики порошкового фарбування Armax MG
+				<h3 class="section__title" data-lang="d-header_page-3">
+
 				</h3>
 				<div class="l-characteristic__container">
 					<div class="l-characteristic__content">
@@ -439,53 +438,54 @@
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#dimension"></use>
 								</svg>
-								<h4 class="l-characteristic__title">
-									Габарит камери обпалу:
+								<h4 class="l-characteristic__title" data-lang="d-header_page-4">
+
 								</h4>
 								<p class="l-characteristic__text">
-									становить (ДхШхВ):
-									<span class="l-characteristic__text--color">2000х1500х1000</span>
-									мм.
+									<span data-lang="d-header_page-5"></span>
+									<span class="l-characteristic__text--color" data-lang="d-header_page-16"></span>
+
 								</p>
 							</div>
 							<div class="l-characteristic__box" data-aos="fade-right">
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#dimension-arrow"></use>
 								</svg>
-								<h4 class="l-characteristic__title">
-									Товщина шару нанесення:
+								<h4 class="l-characteristic__title" data-lang="d-header_page-7">
+
 								</h4>
 								<p class="l-characteristic__text">
-									становить від
-									<span class="l-characteristic__text--color">60</span> до <span
-										class="l-characteristic__text--color">200</span>
-									мкм .
+									<span data-lang="d-header_page-8"></span>
+									<span class="l-characteristic__text--color" data-lang="d-header_page-17"></span><span
+										data-lang="d-header_page-9"></span><span class="l-characteristic__text--color"
+										data-lang="d-header_page-18"></span>
+
 								</p>
 							</div>
 							<div class="l-characteristic__box" data-aos="fade-right">
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#temperature"></use>
 								</svg>
-								<h4 class="l-characteristic__title">
-									Температура запікання фарби:
+								<h4 class="l-characteristic__title" data-lang="d-header_page-10">
+
 								</h4>
 								<p class="l-characteristic__text">
-									становить від
-									<span class="l-characteristic__text--color">150°С</span>
-									до
-									<span class="l-characteristic__text--color">240°С</span>
+									<span data-lang="d-header_page-11"></span>
+									<span class="l-characteristic__text--color" data-lang="d-header_page-19"></span>
+									<span data-lang="d-header_page-12"></span>
+									<span class="l-characteristic__text--color" data-lang="d-header_page-20"></span>
 								</p>
 							</div>
 							<div class="l-characteristic__box l-characteristic__box--shadow" data-aos="fade-right">
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#weight"></use>
 								</svg>
-								<h4 class="l-characteristic__title">
-									Максимальна вага деталі:
+								<h4 class="l-characteristic__title" data-lang="d-header_page-13">
+
 								</h4>
 								<p class="l-characteristic__text">
-									становить
-									<span class="l-characteristic__text--color">50кг</span>
+									<span data-lang="d-header_page-14"></span>
+									<span class="l-characteristic__text--color" data-lang="d-header_page-15"></span>
 								</p>
 							</div>
 						</div>
@@ -520,7 +520,7 @@
 
 		<section class="a-privilege a-privilege--color">
 			<div class="container">
-				<h2 class="section__title">Як ми працюємо?</h2>
+				<h2 class="section__title" data-lang="a-privilege_page-10"></h2>
 				<div class="a-privilege__inner">
 					<div class="a-privilege__box a-privilege__box--size">
 						<div class="a-privilege__card a-privilege__card--position">
@@ -528,8 +528,7 @@
 								<use xlink:href="#document"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Ви залишаєте заявку на розрахунок чи консультацію фахівця
+								<p class="a-privilege__text" data-lang="a-privilege_page-11">
 								</p>
 							</div>
 						</div>
@@ -540,10 +539,7 @@
 								<use xlink:href="#call-center"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Наш менеджер зв’язується з Вами для уточнення технічного
-									завдання
-								</p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-12"></p>
 							</div>
 						</div>
 					</div>
@@ -553,9 +549,8 @@
 								<use xlink:href="#price"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Ви отримуєте прорахунок по проекту не більше ніж за 3 робочі
-									дні
+								<p class="a-privilege__text" data-lang="a-privilege_page-13">
+
 								</p>
 							</div>
 						</div>
@@ -566,8 +561,8 @@
 								<use xlink:href="#sample"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Виготовлення та затвердження Вашого зразка
+								<p class="a-privilege__text" data-lang="a-privilege_page-14">
+
 								</p>
 							</div>
 						</div>
@@ -578,10 +573,7 @@
 								<use xlink:href="#handshake-deal"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Укладання договору та погодження графіка відвантаження
-									партій
-								</p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-15"></p>
 							</div>
 						</div>
 					</div>
@@ -591,8 +583,8 @@
 								<use xlink:href="#product"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Запуск партії виробів у роботу, згідно з термінами відвантаженн
+								<p class="a-privilege__text" data-lang="a-privilege_page-16">
+
 								</p>
 							</div>
 						</div>
@@ -603,24 +595,17 @@
 
 		<section class="l-price ware">
 			<div class="container">
-				<h3 class="section__title">Ціна гнуття металу</h3>
-				<p class="section__text l-price__text">
-					Щоб ми могли зробити точний розрахунок вартості послуг <span
-						class="l-characteristic__text--color">фарбування</span>
-					та терміни виконання замовлення, нам необхідно отримати від Вас
-					повну інформацію про виріб, детальне технічне завдання або
-					креслення. Ціни на послуги із фарбування визначається за такими
-					основними критеріями як:
-				</p>
+				<h3 class="section__title" data-lang="d-price_page-1"></h3>
+				<p class="section__text l-price__text" data-lang="d-price_page-2"></p>
 				<ul class="l-price__list">
-					<li class="l-price__item">Площа фарбування;</li>
-					<li class="l-price__item">
-						Геометрична форма вироби;
+					<li class="l-price__item" data-lang="d-price_page-4"></li>
+					<li class="l-price__item" data-lang="d-price_page-5">
+
 					</li>
-					<li class="l-price__item">Ступінь готовності поверхні до фарбування;</li>
-					<li class="l-price__item">Габаритні розміри;</li>
-					<li class="l-price__item">
-						Матеріал виготовлення;
+					<li class="l-price__item" data-lang="d-price_page-6"></li>
+					<li class="l-price__item" data-lang="d-price_page-7"></li>
+					<li class="l-price__item" data-lang="d-price_page-8">
+
 					</li>
 
 				</ul>
@@ -697,7 +682,7 @@
 						</ul>
 					</div>
 					<div class="info__block info__address">
-						<h5 class="info__title" data-lang="footer_page-11">Адреса</h5>
+						<h5 class="info__title" data-lang="footer_page-11"></h5>
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
@@ -742,7 +727,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="info__item">
