--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <svg class="link-social--svg" width="30" height="20">
                 <use xlink:href="#mail"></use>
               </svg>
-              lazer.armax@gmail.com
+              armax.km@gmail.com
             </a>
           </li>
         </ul>
@@ -162,7 +162,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#phone"></use>
                   </svg>
-                  +38 (099) 132 45 67
+                  +38 (096) 123 91 21
                 </a>
               </li>
               <li class="nav__item-social">
@@ -170,7 +170,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazer.armax@gmail.com
+                  armax.km@gmail.com
                 </a>
               </li>
               <li class="nav__item-social">
@@ -539,7 +539,7 @@
             </ul>
           </div>
           <div class="info__block info__address">
-            <h5 class="info__title" data-lang="footer_page-11">Адреса</h5>
+            <h5 class="info__title" data-lang="footer_page-11"></h5>
             <ul class="info__list">
               <li class="info__item">
                 <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
@@ -584,7 +584,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazer.armax@gmail.com
+                  armax.km@gmail.com
                 </a>
               </li>
               <li class="info__item">
