--- a/locksmith.html
+++ b/locksmith.html
@@ -437,47 +437,64 @@
 							<svg class="link-social--svg" width="30" height="20">
 								<use xlink:href="#mail"></use>
 							</svg>
-							lazer.armax@gmail.com
+							armax.km@gmail.com
 						</a>
 					</li>
 				</ul>
-				<ul class="nav__social-list--desktop nav__social-list--svg">
-					<li class="nav__social-item">
-						<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__social-item">
-						<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-							class="link-social link--hover">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#location"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
+				<div class="nav__container">
+					<div class="header__lang">
+						<button class="header__btn" data-btn="ua">UA</button>
+						<button class="header__btn" data-btn="en">EN</button>
+						<button class="header__btn" data-btn="de">DE</button>
+					</div>
+					<ul class="nav__social-list--desktop nav__social-list--svg">
+						<li class="nav__social-item">
+							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<svg class="link-social--svg" width="25" height="25">
+									<use xlink:href="#facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="nav__social-item">
+							<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+								class="link-social link--hover">
+								<svg class="link-social--svg" width="25" height="25">
+									<use xlink:href="#location"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+
+				</div>
 			</div>
 		</div>
 
 		<div class="header__container container">
 			<div class="menu">
-				<button class="burger-btn"><span></span></button>
-				<h1 class="menu__title">
-					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
-				</h1>
+
+				<div class="menu__container">
+					<button class="burger-btn"><span></span></button>
+					<h1 class="menu__title">
+						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+					</h1>
+					<div class="header__lang nav__list-social">
+						<button class="header__btn" data-btn="ua">UA</button>
+						<button class="header__btn" data-btn="en">EN</button>
+						<button class="header__btn" data-btn="de">DE</button>
+					</div>
+				</div>
+
 				<nav class="nav">
 					<div class="nav__inner">
 						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link--active">Металообробка</a>
+								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
 							</li>
 							<li class="nav__item">
-								<a href="about-us.html" class="link-hover">Про нас</a>
+								<a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
 							</li>
 							<li class="nav__item">
-								<a href="contacts.html" class="link-hover">Контакти</a>
+								<a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
 							</li>
 						</ul>
 
@@ -495,7 +512,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="nav__item-social">
@@ -522,10 +539,9 @@
 
 			<div class="header__content--container">
 				<div class="header__content header__inner">
-					<h1 class="header__content-title">Слюсарні роботи</h1>
-					<p class="header__content-text">
-						Наша компанія надає послуги зі cлюсарних роботи на сучасному
-						обладнанні, за вигідними цінами та у погоджені терміни!
+					<h1 class="header__content-title" data-lang="ls-header-page-1"></h1>
+					<p class="header__content-text" data-lang="ls-header-page-2">
+
 					</p>
 				</div>
 			</div>
@@ -535,7 +551,7 @@
 	<main class="main">
 		<section class="section l-characteristic">
 			<div class="container">
-				<h3 class="section__title">Основні види слюсарних робіт Armax MG</h3>
+				<h3 class="section__title" data-lang="ls-char-page-1"></h3>
 				<div class="l-characteristic__container">
 					<div class="l-characteristic__content">
 						<div class="l-characteristic__info">
@@ -543,22 +559,22 @@
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#machine"></use>
 								</svg>
-								<h4 class="l-characteristic__title">
-									Зачищення швів після зварювання.
+								<h4 class="l-characteristic__title" data-lang="ls-char-page-2">
+
 								</h4>
 							</div>
 							<div class="l-characteristic__box" data-aos="fade-right">
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#drilling"></use>
 								</svg>
-								<h4 class="l-characteristic__title">Свердління отворів.</h4>
+								<h4 class="l-characteristic__title" data-lang="ls-char-page-3"></h4>
 							</div>
 							<div class="l-characteristic__box" data-aos="fade-right">
 								<svg class="l-svg a-privilege--svg" width="100" height="100">
 									<use xlink:href="#circular"></use>
 								</svg>
-								<h4 class="l-characteristic__title">
-									Стрічко пиляльні роботи.
+								<h4 class="l-characteristic__title" data-lang="ls-char-page-4">
+
 								</h4>
 							</div>
 						</div>
@@ -570,18 +586,13 @@
 									</a>
 								</div>
 								<div class="a-gallery__card l-characteristic__photo">
-									<a data-fslightbox="gallery" href="img/locksmith2.jpg">
-										<img src="img/locksmith3.jpg" alt="locksmith3" />
+									<a data-fslightbox="gallery" href="img/locksmith3.jpg">
+										<img src="img/locksmith3.jpg" alt="locksmith2" />
 									</a>
 								</div>
 								<div class="a-gallery__card l-characteristic__photo">
 									<a data-fslightbox="gallery" href="img/locksmith2.jpg" class="a-gallery__link">
 										<img src="img/locksmith2.jpg" alt="locksmith2" />
-									</a>
-								</div>
-								<div class="a-gallery__card disabled-phablet l-characteristic__photo">
-									<a data-fslightbox="gallery" href="img/welder.jpg" class="a-gallery__link">
-										<img src="img/welder.jpg" alt="welder" />
 									</a>
 								</div>
 							</section>
@@ -592,7 +603,7 @@
 		</section>
 		<section class="a-privilege a-privilege--color">
 			<div class="container">
-				<h2 class="section__title">Як ми працюємо?</h2>
+				<h2 class="section__title" data-lang="a-privilege_page-10"></h2>
 				<div class="a-privilege__inner">
 					<div class="a-privilege__box a-privilege__box--size">
 						<div class="a-privilege__card a-privilege__card--position">
@@ -600,8 +611,7 @@
 								<use xlink:href="#document"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Ви залишаєте заявку на розрахунок чи консультацію фахівця
+								<p class="a-privilege__text" data-lang="a-privilege_page-11">
 								</p>
 							</div>
 						</div>
@@ -612,10 +622,7 @@
 								<use xlink:href="#call-center"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Наш менеджер зв’язується з Вами для уточнення технічного
-									завдання
-								</p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-12"></p>
 							</div>
 						</div>
 					</div>
@@ -625,9 +632,8 @@
 								<use xlink:href="#price"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Ви отримуєте прорахунок по проекту не більше ніж за 3 робочі
-									дні
+								<p class="a-privilege__text" data-lang="a-privilege_page-13">
+
 								</p>
 							</div>
 						</div>
@@ -638,8 +644,8 @@
 								<use xlink:href="#sample"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Виготовлення та затвердження Вашого зразка
+								<p class="a-privilege__text" data-lang="a-privilege_page-14">
+
 								</p>
 							</div>
 						</div>
@@ -650,10 +656,7 @@
 								<use xlink:href="#handshake-deal"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Укладання договору та погодження графіка відвантаження
-									партій
-								</p>
+								<p class="a-privilege__text" data-lang="a-privilege_page-15"></p>
 							</div>
 						</div>
 					</div>
@@ -663,9 +666,8 @@
 								<use xlink:href="#product"></use>
 							</svg>
 							<div class="a-privilege__content">
-								<p class="a-privilege__text">
-									Запуск партії виробів у роботу, згідно з термінами
-									відвантаженн
+								<p class="a-privilege__text" data-lang="a-privilege_page-16">
+
 								</p>
 							</div>
 						</div>
@@ -675,21 +677,21 @@
 		</section>
 		<section class="l-price ware">
 			<div class="container">
-				<h3 class="section__title">Ціна зварювання металу</h3>
+				<h3 class="section__title" data-lang="ls-price-page-1"></h3>
 				<p class="section__text l-price__text">
-					Щоб ми могли зробити точний розрахунок вартості
-					<span class="l-characteristic__text--color">слюсарних робіт</span>
-					та терміни виконання послуги, нам необхідно отримати від Вас повну
-					інформацію про виріб, детальне технічне завдання або креслення. Ціни
-					на послуги
-					<span class="l-characteristic__text--color">слюсарних робіт</span>
-					визначається за такими основними критеріями як:
+					<span data-lang="ls-price-page-2"></span>
+
+					<span class="l-characteristic__text--color" data-lang="ls-price-page-3"></span>
+					<span data-lang="ls-price-page-4"></span>
+
+					<span class="l-characteristic__text--color" data-lang="ls-price-page-5"></span>
+					<span data-lang="ls-price-page-10"></span>
 				</p>
 				<ul class="l-price__list">
-					<li class="l-price__item">Cкладності робіт;</li>
-					<li class="l-price__item">Виду металу;</li>
-					<li class="l-price__item">Додаткових видів механічної обробки;</li>
-					<li class="l-price__item">Строки виконання замовлення;</li>
+					<li class="l-price__item" data-lang="ls-price-page-6"></li>
+					<li class="l-price__item" data-lang="ls-price-page-7"></li>
+					<li class="l-price__item" data-lang="ls-price-page-8"></li>
+					<li class="l-price__item" data-lang="ls-price-page-9"></li>
 				</ul>
 			</div>
 		</section>
@@ -699,24 +701,24 @@
 			<div class="calculation__inner">
 				<div class="calculation__wrapper container">
 					<div class="calculation__content">
-						<h3 class="section__title calculation__title">
-							Замовити прорахунок проекту
-						</h3>
+						<h3 class="section__title calculation__title" data-lang="calculation_page-1"></h3>
 					</div>
 					<div class="calculation__form-container">
-
 						<form class="calculation__form" action="send_mail.php" name="form" method="POST">
-							<input class="input-name" type="text" placeholder="Ваше ім'я" name="name" id="name" />
-							<input class="input-number" type="text" placeholder="Ваш E-mail" name="email" id="email"
-								data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
+							<input class="input-name" type="text" placeholder="Name" name="name" id="name"
+								data-lang="calculation_page-4" />
+							<input class="input-number" type="text" placeholder="E-mail" name="email" id="email"
+								data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" data-lang="calculation_page-5" />
 
 
 							<input class="input-number" type="text" placeholder="099 123 23 12" name="phone" id="phone" />
-							<textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
-							<label class="calculation__label" for="file">Завантажити файл:</label>
+							<textarea class="form-textarea" cols="40" rows="6" placeholder="Comment"
+								data-lang="calculation_page-6"></textarea>
+							<label class="calculation__label" for="file" data-lang="calculation_page-2"></label>
 							<input class="calculation__input-file" type="file" id="file" />
 
-							<input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
+							<button class="button button-form" type="submit" id="btn_send" data-lang="calculation_page-3"
+								value="Надіслати">
 							</button>
 						</form>
 					</div>
@@ -729,62 +731,64 @@
 			<div class="container">
 				<div class="info">
 					<div class="info__block info__menu">
-						<h5 class="info__title">Меню</h5>
+						<h5 class="info__title" data-lang="footer_page-1"></h5>
 						<ul>
 							<li class="info__item">
-								<a class="info__link" href="services.html">Послуги</a>
+								<a class="info__link" href="services.html" data-lang="footer_page-2"></a>
 							</li>
 							<li class="info__item">
-								<a class="info__link" href="about-us.html">Про нас</a>
+								<a class="info__link" href="about-us.html" data-lang="footer_page-3"></a>
 							</li>
 							<li class="info__item">
-								<a class="info__link" href="contacts.html">Контакти</a>
+								<a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
 							</li>
+
 						</ul>
 					</div>
 					<div class="info__block info__schedule">
-						<h5 class="info__title">Послуги</h5>
+						<h5 class="info__title" data-lang="footer_page-5"></h5>
 						<ul class="info__list">
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Лазерна порізка</a>
+								<a href="lazer.html" class="info__link" data-lang="footer_page-6"></a>
 							</li>
 							<li class="info__item">
-								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
+								<a href="sheet-bending.html" class="info__link" data-lang="footer_page-7"></a>
 							</li>
 							<li class="info__item">
-								<a href="dyeing.html" class="info__link">Порошкове фарбування</a>
+								<a href="dyeing.html" class="info__link" data-lang="footer_page-8"></a>
 							</li>
 							<li class="info__item">
-								<a href="welding.html" class="info__link">Зварювальні роботи</a>
+								<a href="welding.html" class="info__link" data-lang="footer_page-9"></a>
 							</li>
 							<li class="info__item">
-								<a href="locksmith.html" class="info__link">Слюсарні роботи</a>
+								<a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
 							</li>
 						</ul>
 					</div>
 					<div class="info__block info__address">
-						<h5 class="info__title">Адреса</h5>
+						<h5 class="info__title" data-lang="footer_page-11"></h5>
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-									class="link-social link--hover">
-									<svg class="link-social--svg" width="30" height="30">
-										<use xlink:href="#location"></use>
-									</svg>
-									45200 м. Ківерці, вул.Грушевського 26
+									class="link-social link--hover" data-lang="footer_page-12">
+
 								</a>
+								<svg class="link-social--svg" width="30" height="30">
+									<use xlink:href="#location"></use>
+								</svg>
 							</li>
 							<li class="info__item info__item--color">
-								<svg class="clock-svg" width="25" height="25">
+								<a href="" class="link-social " id="disabledLink" data-lang="footer_page-13"></a>
+								<svg class="clock-svg link-social--svg" width="25" height="25">
 									<use xlink:href="#clock"></use>
 								</svg>
-								Пн - Пт 8:00 - 17:00
 							</li>
+
 						</ul>
 					</div>
 
 					<div class="info__block info__contact">
-						<h5 class="info__title">Наші контакти</h5>
+						<h5 class="info__title" data-lang="footer_page-14"></h5>
 						<ul class="info__list">
 							<li class="info__item">
 								<a class="link-social link--hover" href="tel:+380687945051">
@@ -807,7 +811,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="info__item">
@@ -827,6 +831,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/lang.js"></script>
 	<script src="js/swiper.js"></script>
 	<script src="js/fslightbox.js"></script>
 	<script src="js/app.js"></script>
