--- a/services.html
+++ b/services.html
@@ -91,7 +91,7 @@
 							<svg class="link-social--svg" width="30" height="20">
 								<use xlink:href="#mail"></use>
 							</svg>
-							lazer.armax@gmail.com
+							armax.km@gmail.com
 						</a>
 					</li>
 				</ul>
@@ -158,7 +158,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#phone"></use>
 									</svg>
-									+38 (099) 132 45 67
+									+38 (096) 123 91 21
 								</a>
 							</li>
 							<li class="nav__item-social">
@@ -166,7 +166,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="nav__item-social">
@@ -193,8 +193,8 @@
 
 			<div class="header__content--container s-header__content--container">
 				<div class="s-header__content header__inner">
-					<h1 class="header__content-title c-header__content-title">
-						Наші послуги
+					<h1 class="header__content-title c-header__content-title" data-lang="s-header_pag-1">
+
 					</h1>
 					<p class="header__content-text">
 
@@ -214,17 +214,13 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="lazer.html">
-									Лазерна порізка
-								</a>
+								<a class="services__name-link" href="lazer.html" data-lang="services_page-2"></a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">
-									Лазер дозволяє виконувати як легкі, так і складні деталі,
-									гарантуючи високу точність і відмінну швидкість роботи.
+								<h4 class="services__hover-title" data-lang="services_page-3">
 								</h4>
 								<a class="services__hover-text" href="lazer.html">
-									<span class="services__hover--circle">Детальніше</span>
+									<span class="services__hover--circle" data-lang="services_page-4"></span>
 								</a>
 								<a class="services__link" href="lazer.html"></a>
 							</div>
@@ -238,18 +234,12 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="sheet-bending.html">
-									Гнуття деталей
-								</a>
+								<a class="services__name-link" href="sheet-bending.html" data-lang="services_page-5"></a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">
-									Гнуття металу - э однією з основних сфер застосування
-									листового металу є виготовлення виробів із зігнутих листових
-									деталей.
-								</h4>
+								<h4 class="services__hover-title" data-lang="services_page-6"></h4>
 								<a class="services__hover-text" href="sheet-bending.html">
-									<span class="services__hover--circle">Детальніше</span>
+									<span class="services__hover--circle" data-lang="services_page-7"></span>
 								</a>
 								<a class="services__link" href="sheet-bending.html"></a>
 							</div>
@@ -263,18 +253,12 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="dyeing.html">
-									Порошкове фарбування
-								</a>
+								<a class="services__name-link" href="dyeing.html" data-lang="services_page-9"></a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">
-									Порошкове фарбування металевих виробів забезпечує високу
-									якість покриття., зберігає відмінні фізико-хімічні та
-									оздоблювальні характеристики.
-								</h4>
+								<h4 class="services__hover-title" data-lang="services_page-8"></h4>
 								<a class="services__hover-text" href="dyeing.html">
-									<span class="services__hover--circle">Детальніше</span>
+									<span class="services__hover--circle" data-lang="services_page-10"></span>
 								</a>
 								<a class="services__link" href="dyeing.html"></a>
 							</div>
@@ -288,20 +272,15 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="welding.html">
-									Зварювальні роботи
+								<a class="services__name-link" href="welding.html" data-lang="s-services_page-1">
+
 								</a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">
-									Зварювання металу — це процес сплавлення двох металевих
-									частин разом, із застосуванням тепла та тиску для утворення
-									міцного зв’язку металу. Тепло генерується електричною дугою
-									або полум’ям, а тиск прикладається за допомогою
-									зварювального інструменту.
+								<h4 class="services__hover-title" data-lang="s-services_page-2">
 								</h4>
 								<a class="services__hover-text" href="welding.html">
-									<span class="services__hover--circle">Детальніше</span>
+									<span class="services__hover--circle" data-lang="s-services_page-3"></span>
 								</a>
 								<a class="services__link" href="welding.html"></a>
 							</div>
@@ -315,18 +294,16 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="locksmith.html">
-									Слюсарні роботи
+								<a class="services__name-link" href="locksmith.html" data-lang="s-services_page-4">
+
 								</a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">
-									Слюсарні роботи — це процес обробки металів, який зазвичай
-									доповнює інші види металообробки і доводить виріб до
-									готового стану.
+								<h4 class="services__hover-title" data-lang="s-services_page-5">
+
 								</h4>
 								<a class="services__hover-text" href="locksmith.html">
-									<span class="services__hover--circle">Детальніше</span>
+									<span class="services__hover--circle" data-lang="s-services_page-6"></span>
 								</a>
 								<a class="services__link" href="locksmith.html"></a>
 							</div>
@@ -340,16 +317,16 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link">
-									Розробка КД
+								<a class="services__name-link" data-lang="s-services_page-7">
+
 								</a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">
-									Розробка КД документації
+								<h4 class="services__hover-title" data-lang="s-services_page-8">
+
 								</h4>
 								<a class="services__hover-text">
-									<span class="services__hover--circle">Детальніше</span>
+									<span class="services__hover--circle" data-lang="s-services_page-9"></span>
 								</a>
 								<a class="services__link"></a>
 							</div>
@@ -430,7 +407,7 @@
 						</ul>
 					</div>
 					<div class="info__block info__address">
-						<h5 class="info__title" data-lang="footer_page-11">Адреса</h5>
+						<h5 class="info__title" data-lang="footer_page-11"></h5>
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
@@ -475,7 +452,7 @@
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#mail"></use>
 									</svg>
-									lazer.armax@gmail.com
+									armax.km@gmail.com
 								</a>
 							</li>
 							<li class="info__item">
